--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "architectury-plugin" version "3.0-SNAPSHOT"
+    id "architectury-plugin" version "3.1-SNAPSHOT"
     id "forgified-fabric-loom" version "0.6-SNAPSHOT" apply false
 }
 
@@ -10,14 +10,14 @@ architectury {
 subprojects {
     apply plugin: "forgified-fabric-loom"
 
-    loom {
-        silentMojangMappingsLicense()
+    repositories {
+        maven { url 'https://jitpack.io' }
     }
 
     dependencies {
         minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
         // The following line declares the mojmap mappings, you may use other mappings as well
-        mappings loom.officialMojangMappings()
+        mappings("net.fabricmc:yarn:${rootProject.yarn_mappings}:v2")
         // The following line declares the yarn mappings you may select this one as well.
         // mappings "net.fabricmc:yarn:1.16.5+build.4"
     }
