--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,18 @@
-org.gradle.jvmargs=-Xmx2048M
+# Done to increase the memory available to gradle.
+org.gradle.jvmargs=-Xmx1G
 
+# Fabric Properties
 minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.6
+loader_version=0.11.3
 
-archives_base_name=examplemod
-mod_version=1.0.0
-maven_group=net.examplemod
+#Fabric api
+fabric_version=0.33.0+1.16
 
-architectury_version=1.8.131
-
-fabric_loader_version=0.11.2
-fabric_api_version=0.32.0+1.16
-
+#Forge
 forge_version=36.0.46
+
+# Mod Properties
+mod_version = 1.0.0
+maven_group = org.samo_lego
+archives_base_name = mobdisguises
