--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,9 +1,9 @@
 dependencies {
     // We depend on fabric loader here to use the fabric @Environment annotations and get the mixin dependencies
     // Do NOT use other classes from fabric loader
-    modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
+    modImplementation "net.fabricmc:fabric-loader:${rootProject.loader_version}"
 
-    modApi 'com.github.NucleoidMC.DisguiseLib:disguiselib:6b5e6b94ac'
+    modCompileOnly 'com.github.NucleoidMC.DisguiseLib:disguiselib-fabric:6b5e6b94ac'
 }
 
 architectury {
