--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -11,9 +11,19 @@ architectury {
     fabric()
 }
 
+repositories {
+    maven {
+        name = "LuckPerms maven"
+        url = 'https://oss.sonatype.org/content/repositories/snapshots'
+    }
+}
+
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.loader_version}"
     modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_version}"
+
+    // Permission API
+    modImplementation 'me.lucko:fabric-permissions-api:0.1-SNAPSHOT'
 
     modRuntime 'com.github.NucleoidMC.DisguiseLib:disguiselib-fabric:6b5e6b94ac'
     modRuntime "com.github.CaffeineMC:hydrogen-fabric:mc1.16.5-v0.2.0"
