TrueSight for disguises

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     // Permission API
     modImplementation 'me.lucko:fabric-permissions-api:0.1-SNAPSHOT'
 
-    modRuntime 'com.github.NucleoidMC.DisguiseLib:disguiselib-fabric:6b5e6b94ac'
+    modRuntime "com.github.NucleoidMC.DisguiseLib:disguiselib-fabric:${rootProject.disguiselib_version}"
     modRuntime "com.github.CaffeineMC:hydrogen-fabric:mc1.16.5-v0.2.0"
     modRuntime "com.github.astei:lazydfu:0.1.2"
 
