--- a/common/build.gradle
+++ b/common/build.gradle
@@ -3,7 +3,7 @@ dependencies {
     // Do NOT use other classes from fabric loader
     modImplementation "net.fabricmc:fabric-loader:${rootProject.loader_version}"
 
-    modCompileOnly 'com.github.NucleoidMC.DisguiseLib:disguiselib-fabric:6b5e6b94ac'
+    modCompileOnly "com.github.NucleoidMC.DisguiseLib:disguiselib-fabric:${rootProject.disguiselib_version}"
 }
 
 architectury {
