--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -19,6 +19,8 @@ loom {
 dependencies {
     forge "net.minecraftforge:forge:${rootProject.minecraft_version}-${rootProject.forge_version}"
 
+    modRuntime "com.github.NucleoidMC.DisguiseLib:disguiselib-forge:${rootProject.disguiselib_version}"
+
     implementation(project(path: ":common")) {
         transitive = false
     }
