--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,6 @@ forge_version=36.0.46
 mod_version = 1.0.0
 maven_group = org.samo_lego
 archives_base_name = mobdisguises
+
+# Dependencies
+disguiselib_version = 1.0.2
