--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     // Permission API
     modImplementation 'me.lucko:fabric-permissions-api:0.1-SNAPSHOT'
 
+    include("com.github.NucleoidMC.DisguiseLib:disguiselib-fabric:${rootProject.disguiselib_version}")
+
     modRuntime "com.github.NucleoidMC.DisguiseLib:disguiselib-fabric:${rootProject.disguiselib_version}"
     modRuntime "com.github.CaffeineMC:hydrogen-fabric:mc1.16.5-v0.2.0"
     modRuntime "com.github.astei:lazydfu:0.1.2"
