--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,5 +43,5 @@ jobs:
       - name: Upload GitHub release
         uses: AButler/upload-release-assets@v2.0
         with:
-          files: 'fabric/build/libs/*-fabric.jar' #;forge/build/libs/*-forge.jar'
+          files: 'fabric/build/libs/*-fabric.jar;forge/build/libs/*-forge.jar'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
