--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,36 @@
-build/
-*.ipr
-run/
-*.iws
-out/
-*.iml
-.gradle/
-output/
-bin/
-libs/
+# gradle
 
+.gradle/
+build/
+out/
+classes/
+
+# eclipse
+
+*.launch
+
+# idea
+
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# vscode
+
+.settings/
+.vscode/
+bin/
 .classpath
 .project
-.idea/
-classes/
-.metadata
-.vscode
-.settings
-*.launch
+
+# macos
+
+*.DS_Store
+
+# fabric
+
+run/
+
+# Architectury
+.architectury-transformer
