--- a/common/build.gradle
+++ b/common/build.gradle
@@ -7,12 +7,17 @@ dependencies {
 }
 
 architectury {
-    common(false)
+    common()
 }
 
-java {
-    withSourcesJar()
+configurations {
+    dev
 }
+
+artifacts {
+    dev(jar)
+}
+
 
 publishing {
     publications {
