--- a/gradle.properties
+++ b/gradle.properties
@@ -2,20 +2,20 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.61
-loader_version=0.11.7
+minecraft_version=1.18-rc1
+yarn_mappings=1.18-rc1+build.1
+loader_version=0.12.5
 
 #Fabric api
-fabric_version=0.40.1+1.17
+fabric_version=0.43.1+1.18
 
 #Forge
 forge_version=37.0.69
 
 # Mod Properties
-mod_version = 1.0.6
+mod_version = 1.0.7
 maven_group = org.samo_lego
 archives_base_name = mobdisguises
 
 # Dependencies
-disguiselib_version = 1.1.0
+disguiselib_version = 1.1.1
