--- a/gradle.properties
+++ b/gradle.properties
@@ -2,20 +2,20 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.18-rc1
-yarn_mappings=1.18-rc1+build.1
-loader_version=0.12.5
+minecraft_version=1.18.1
+yarn_mappings=1.18.1+build.22
+loader_version=0.13.1
 
 #Fabric api
-fabric_version=0.43.1+1.18
+fabric_version=0.46.4+1.18
 
 #Forge
-forge_version=37.0.69
+forge_version=39.0.66
 
 # Mod Properties
-mod_version = 1.0.7
+mod_version = 1.0.8
 maven_group = org.samo_lego
 archives_base_name = mobdisguises
 
 # Dependencies
-disguiselib_version = 1.1.1
+disguiselib_version = 1.2.1
